--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,6 +31,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: install deps
+        run: npm install
+      - name: build project
+        run: npm run build
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
