--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "my-starter",
+  "name": "react_worldwise",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": "unibox",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
