--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,9 +33,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: install deps
-        run: pnpm i
+        run: npm install
       - name: build project
-        run: pnpm build
+        run: npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
