--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "author": "unibox",
+  "homepage": "/react_worldwise",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
